# traQmania

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  README.md  pyproject.toml  rqb-demo.json  run.sh
.github/workflows/: ci.yml  publish.yml
data/histories/: chicane_q10_s0.history.json  chicane_q10_s1.history.json  chicane_q10_s42.history.json  chicane_q6_s0.history.json  chicane_q6_s1.history.json  chicane_q6_s42.history.json  chicane_q8_bundle_s42.history.json  chicane_q8_s0.history.json  ckpt_gp.history.json  (+144 more)
docs/: ARCHITECTURE.md  EXHIBITION.md  SCIENCE.md  TM2020-CONCEPT.md
notebooks/: 01_the_racing_env.ipynb  02_q_learning_from_scratch.ipynb  03_quantum_circuits_as_q_functions.ipynb  04_training_the_quantum_driver.ipynb  05_real_quantum_hardware.ipynb  06_scaling_and_features.ipynb
tests/: e2e_ws_drive.py  test_agents.py  test_config.py  test_config_profiles.py  test_docs_api.py  test_draw_track.py  test_driver_lock.py  test_driver_select.py  test_fastsim_shapes.py  test_fastsim_vs_qiskit.py  test_features.py  test_gradients.py  test_hardware.py  test_import_hygiene.py  test_leaderboard.py  test_obs_aware_weights.py  test_physics.py  test_protocol.py  test_qubit_scaling.py  test_qubit_switch.py  test_racing_env.py  test_random_track.py  test_scaled_actions.py  test_session.py  test_session_hardware.py  test_stage_meta.py  test_track_geometry.py  test_trackgen.py  test_training_smoke.py  test_wraparound.py
tools/: make_combo_track.py  make_stages.py
traqmania/: __init__.py  __main__.py  bench.py  config.py  hardware.py  records.py  train_headless.py
(+143 files in other folders)
