[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "traqmania"
version = "0.1.0"
description = "traQmania — a quantum reinforcement learning racing demo (Trackmania-style, Qiskit-powered)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Jan Lahmann" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "qiskit>=2.0",
    "qiskit-aer>=0.17",
    "qiskit-machine-learning>=0.9",
]

[project.optional-dependencies]
hardware = ["qiskit-ibm-runtime>=0.40"]
notebooks = ["jupyter", "matplotlib", "pylatexenc"]
dev = ["pytest>=8", "ruff>=0.4", "httpx>=0.27", "pytest-asyncio>=0.23"]

[project.scripts]
traqmania = "traqmania.__main__:main"

[tool.setuptools.packages.find]
include = ["traqmania*"]

[tool.setuptools.package-data]
traqmania = [
    "config/*.toml", "env/tracks/*.json", "weights/*.npz", "weights/*.json",
    "data/ghosts/*.json",
    "web/*.html", "web/css/*.css", "web/js/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
